--- a/src/test/resources/kotest.properties
+++ b/src/test/resources/kotest.properties
@@ -1,4 +1,4 @@
-kotest.framework.assertion.globalassertsoftly=true
+kotest.framework.assertion.globalassertsoftly=false
 kotest.framework.parallelism = 4
 kotest.framework.classpath.scanning.config.disable=true
 kotest.framework.classpath.scanning.autoscan.disable=true
